# Libraries

./: .gitignore  .hdoc.toml  CMakeLists.txt  Doxyfile  README.md
exception/: CMakeLists.txt  Exception  Main.cpp  Main.hpp  README.md  README_external.md
exception/doc/: Exception
exception/doc/docbook/: annotated.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_ad2b76ad869a1cd23bb11942e1164c56.xml  dir_bf9f26469d00835ba20ff8d80ee5a804.xml  index.xml  mainpage.xml
exception/doc/html/: AbstractException_8hpp.html  AbstractException_8hpp_source.html  ArithmeticException_8hpp.html  ArithmeticException_8hpp_source.html  FileNotFoundException_8hpp.html  FileNotFoundException_8hpp_source.html  IllegalAccessException_8hpp.html  IllegalAccessException_8hpp_source.html  IllegalArgumentException_8hpp.html  IllegalArgumentException_8hpp_source.html  IllegalCastException_8hpp.html  IllegalCastException_8hpp_source.html  IllegalStateException_8hpp.html  IllegalStateException_8hpp_source.html  IndexOutOfBoundsException_8hpp.html  IndexOutOfBoundsException_8hpp_source.html  Main_8cpp.html  NoSuchFieldException_8hpp.html  NoSuchFieldException_8hpp_source.html  NoSuchMethodException_8hpp.html  NoSuchMethodException_8hpp_source.html  NotFoundException_8hpp.html  NotFoundException_8hpp_source.html  NullPointerException_8hpp.html  NullPointerException_8hpp_source.html  PermissionException_8hpp.html  PermissionException_8hpp_source.html  README_8md.html  RuntimeException_8hpp.html  RuntimeException_8hpp_source.html  SocketException_8hpp.html  SocketException_8hpp_source.html  StackOverflowException_8hpp.html  StackOverflowException_8hpp_source.html  StackUnderflowException_8hpp.html  StackUnderflowException_8hpp_source.html  annotated.html  classes.html  classjpl_1_1__exception_1_1AbstractException-members.html  classjpl_1_1__exception_1_1AbstractException.html  (+49 more)
exception/doc/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_ad2b76ad869a1cd23bb11942e1164c56.tex  dir_bf9f26469d00835ba20ff8d80ee5a804.tex  files.tex  hierarchy.tex  index.tex  namespaces.tex  refman.tex
exception/doc/rtf/: dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_ad2b76ad869a1cd23bb11942e1164c56.rtf  dir_bf9f26469d00835ba20ff8d80ee5a804.rtf  refman.rtf
exception/src/: AbstractException.hpp  IllegalArgumentException.hpp  StackUnderflowException.hpp
exception/src/reflection/: IllegalAccessException.hpp  NoSuchFieldException.hpp  NoSuchMethodException.hpp
exception/src/runtime/: ArithmeticException.hpp  FileNotFoundException.hpp  IOException.hpp  IllegalArgumentException.hpp  IllegalCastException.hpp  IllegalStateException.hpp  IndexOutOfBoundsException.hpp  NotFoundException.hpp  NullPointerException.hpp  OutOfMemoryException.hpp  PermissionException.hpp  RuntimeException.hpp  SocketException.hpp  StackOverflowException.hpp  StackUnderflowException.hpp
logger/: CMakeLists.txt  Main.cpp  Main.hpp  README.md  compile.sh
logger/doc/: logger
logger/doc/html/: Logger_8cpp.html  Logger_8hpp.html  Logger_8hpp_source.html  Main_8cpp.html  README_8md.html  annotated.html  classes.html  classjpl_1_1__logger_1_1Logger-members.html  classjpl_1_1__logger_1_1Logger.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  jquery.js  menudata.js  namespacejpl.html  namespacejpl_1_1__logger.html  namespacemembers.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html
logger/doc/latex/: Logger_8cpp.tex  Logger_8hpp.tex  Logger_8hpp_source.tex  Main_8cpp.tex  annotated.tex  classjpl_1_1__logger_1_1Logger.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  index.tex  namespacejpl.tex  namespacejpl_1_1__logger.tex  namespaces.tex  refman.tex
logger/src/: Logger.cpp  Logger.hpp  LoggerWrapper.hpp  PrintLogger.hpp
utils/: CMakeLists.txt  Main  Main.cpp  Main.hpp  README.md  compile.sh
utils/doc/: utils
utils/doc/html/: BitsUtils_8hpp.html  BitsUtils_8hpp_source.html  CharUtils_8hpp.html  CharUtils_8hpp_source.html  ConversionUtils_8hpp.html  ConversionUtils_8hpp_source.html  DebugUtils_8hpp.html  DebugUtils_8hpp_source.html  ErrorUtils_8hpp.html  ErrorUtils_8hpp_source.html  FilesUtils_8hpp.html  FilesUtils_8hpp_source.html  Main_8cpp.html  README_8md.html  annotated.html  classes.html  dir_06656cf983437c25e74072ac09272f6d.html  dir_399a3e73643350d7b167ce9b5ae1f3b2.html  dir_44d5bc2300862405dbe586a8cb303c4f.html  dir_495e8b3365f26c7c21d8383554313257.html  dir_5412bac1316550634d3853925a7d477d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_768a035881214d7120ec925113396032.html  dir_79bb3e5ce9d9d52b7e85cd5de3e15a4a.html  dir_91a69208d7973b7a5b89d93888e0cd3d.html  dir_d339f05bc263c14b8fd8d7cd3cf1ebf0.html  dir_ea541cb5b20e453bd776701f827a10ce.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  menudata.js  namespacejpl.html  namespacejpl_1_1__utils.html  (+9 more)
utils/doc/latex/: BitsUtils_8hpp.tex  BitsUtils_8hpp_source.tex  CharUtils_8hpp.tex  CharUtils_8hpp_source.tex  ConversionUtils_8hpp.tex  ConversionUtils_8hpp_source.tex  DebugUtils_8hpp.tex  DebugUtils_8hpp_source.tex  ErrorUtils_8hpp.tex  ErrorUtils_8hpp_source.tex  FilesUtils_8hpp.tex  FilesUtils_8hpp_source.tex  Main_8cpp.tex  annotated.tex  dir_06656cf983437c25e74072ac09272f6d.tex  dir_399a3e73643350d7b167ce9b5ae1f3b2.tex  dir_44d5bc2300862405dbe586a8cb303c4f.tex  dir_495e8b3365f26c7c21d8383554313257.tex  dir_5412bac1316550634d3853925a7d477d.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_768a035881214d7120ec925113396032.tex  dir_79bb3e5ce9d9d52b7e85cd5de3e15a4a.tex  dir_91a69208d7973b7a5b89d93888e0cd3d.tex  dir_d339f05bc263c14b8fd8d7cd3cf1ebf0.tex  dir_ea541cb5b20e453bd776701f827a10ce.tex  files.tex  (+9 more)
utils/src/: BitsUtils.hpp  CharUtils.hpp  ConversionUtils.hpp  DebugUtils.hpp  ErrorUtils.hpp  FilesUtils.hpp  MatrixUtils.hpp  Reflection.hpp  StringUtils.cpp  StringUtils.hpp  VectorUtils.hpp
(+1950 files in other folders)
